# TRGif---Gif-thrower

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src/: App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  shared_state.rs
src/components/: EmoC.tsx
src/components/styles/: emocomp.css
