[package]
name = "trg"
version = "0.1.0"
description = "The right Gif in the right place"
authors = ["Le Dex"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "system-tray",
    "shell-open",
    "path-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
device_query = "1.1.3"
rdev = "0.5.3"
arboard = "3.2.1"
serde_derive = "1.0.189"
walkdir = "2.4.0"
toml = "0.8.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
